--- a/src/Components/Button/button.scss
+++ b/src/Components/Button/button.scss
@@ -10,6 +10,7 @@
     font-weight: 700;
     font-size: 18px;
     box-sizing: border-box;
+    cursor: pointer;
 }
 
 
@@ -21,5 +22,5 @@
 .outlined {
     color: $orange;
     background: transparent;
-    border: solid 2px $orange;
+    border: solid 1px $orange;
 }
