them router dashboard

--- a/src/Components/Layout/Device/device.scss
+++ b/src/Components/Layout/Device/device.scss
@@ -1,7 +1,7 @@
 @import "../../../scss/color";
 
-.app__layout-dashboard {
+.app__layout-device {
     flex: 1;
     height: inherit;
-    background-color: red;
+    background-color: blue;
 }
