update info user

--- a/src/Components/Layout/Dashboard/dashboard.scss
+++ b/src/Components/Layout/Dashboard/dashboard.scss
@@ -1,7 +1,8 @@
 @import "../../../scss/color";
 
 .app__layout-dashboard {
-    flex: 1;
-    height: inherit;
+    height: 100%;
+    width: 100%;
     background-color: red;
 }
+
