--- a/src/Pages/Dashboard/dashboardpage.scss
+++ b/src/Pages/Dashboard/dashboardpage.scss
@@ -9,13 +9,22 @@
   position: relative;
 
   .dashboard__content {
-      height: inherit;
-      flex: 1;
+        position: fixed;
+        top: 0;
+  left: 200px;
+  bottom: 0;
+  right: 0;
+  padding: 30px 0px 0px 24px;
+  &__container {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    position: relative;
+  }
 
-      &-heading {
-          font-size: 18px;
-
-      }
+      
       
   }
 }
