--- a/src/Components/Layout/Dashboard/dashboard.scss
+++ b/src/Components/Layout/Dashboard/dashboard.scss
@@ -14,7 +14,7 @@
     font-size: 20px;
     font-weight: 700;
     line-height: 30px;
-    color: $orange;
+    color: $oranged;
   }
 
   .app__layout-dashboard__title2 {
@@ -23,7 +23,7 @@
     font-size: 24px;
     font-weight: 700;
     line-height: 36px;
-    color: $orange;
+    color: $oranged;
     padding-top: 45px;
   }
 
@@ -285,7 +285,7 @@
   }
 
   .row2 {
-    background-color: red;
+    // background-color: red;
     max-width: 100%;
     width: 791px;
     height: 484px;
