--- a/src/Components/Layout/Dashboard/Calendar/calendar.scss
+++ b/src/Components/Layout/Dashboard/Calendar/calendar.scss
@@ -1,10 +1,10 @@
-@import '../../../../scss/color';
+@import "../../../../scss/color";
 
 .react-calendar {
   height: fit-content;
   width: 100%;
   background-color: $background;
-  box-shadow: 2px 2px 15px 0px $gray;
+  box-shadow: $shadow;
   border-radius: 12px;
   padding: 0 30px 24px 30px;
   box-sizing: border-box;
