--- a/src/Components/Layout/Dashboard/StatsPanel/statspanel.scss
+++ b/src/Components/Layout/Dashboard/StatsPanel/statspanel.scss
@@ -1,4 +1,4 @@
-@import '../../../../scss/color';
+@import "../../../../scss/color";
 
 .dashboard__stats {
   width: 400px;
@@ -28,6 +28,9 @@
     padding: 0 24px;
     height: fit-content;
     box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
   }
 
   &__calendar {
