--- a/src/Components/Layout/Dashboard/StatsPanel/statspanel.scss
+++ b/src/Components/Layout/Dashboard/StatsPanel/statspanel.scss
@@ -1,4 +1,4 @@
-@import "../../../../scss/color";
+@import '../../../../scss/color';
 
 .dashboard__stats {
   width: 400px;
@@ -11,6 +11,9 @@
   overflow-y: scroll;
   overflow-x: hidden;
   margin-left: auto;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   &__label {
     width: inherit;
