--- a/src/Components/Layout/Dashboard/dashboard.scss
+++ b/src/Components/Layout/Dashboard/dashboard.scss
@@ -1,4 +1,4 @@
-@import "../../../scss/color";
+@import '../../../scss/color';
 
 .app__layout-dashboard {
   height: 100%;
@@ -31,6 +31,9 @@
   gap: 20px;
   overflow-x: hidden;
   overflow-y: scroll;
+  &::-webkit-scrollbar {
+    display: none;
+  }
 
   .counter-label {
     font-size: 24px;
