--- a/src/scss/_color.scss
+++ b/src/scss/_color.scss
@@ -7,6 +7,7 @@ $oranged: #ff7506;
 $blue: #5185f7;
 $shadow: 2px 2px 15px 0px rgba(70, 64, 67, 0.1);
 $green: #35c75a;
+$icon: #a9a9b0;
 
 .blue {
   color: $blue;
