--- a/src/Components/Pagination/pagination.scss
+++ b/src/Components/Pagination/pagination.scss
@@ -1,8 +1,8 @@
 @import '../../scss/color';
 
 .app__pagination {
-  width: 100%;
-  max-width: 250px;
+  width: fit-content;
+  max-width: 282px;
   height: 32px;
   display: flex;
   flex-direction: row;
