--- a/src/Components/Table/table.scss
+++ b/src/Components/Table/table.scss
@@ -7,8 +7,11 @@
 }
 
 table {
+  height: inherit;
+  width: inherit;
   border-collapse: collapse;
   //   border: solid 1px rgba($color: $orange, $alpha: 0.2);
+
   thead {
     height: 49px;
     width: inherit;
@@ -35,52 +38,64 @@ table {
     }
   }
 
-  tr {
-    height: 49px;
-    td {
-      padding-left: 8px;
-      font-family: Nunito;
-      font-size: 14px;
-      font-weight: 400;
-      line-height: 21px;
-
-      .row {
-        height: inherit;
-        width: inherit;
-        display: flex;
-        flex-direction: row;
-        align-items: center;
-        justify-content: flex-start;
-        gap: 8px;
-      }
-
-      .status-dot {
-        height: 8px;
-        width: 8px;
-        border-radius: 50%;
-      }
-
-      .active {
-        background-color: $green;
-      }
-      .inactive {
-        background-color: $red;
-      }
-
-      &:not(:last-child) {
-        border-right: 1px solid #ffe3cd;
-      }
-    }
-
-    &:nth-child(odd) {
-      background-color: $background;
-    }
-    &:nth-child(even) {
-      background-color: rgba($color: $orange, $alpha: 0.1);
-    }
-
-    &:last-child {
+  tbody {
+    tr {
+      height: 49px;
       td {
+        padding-left: 8px;
+        font-family: Nunito;
+        font-size: 14px;
+        font-weight: 400;
+        line-height: 21px;
+
+        .row {
+          height: inherit;
+          width: inherit;
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          justify-content: flex-start;
+          gap: 8px;
+        }
+
+        .status-dot {
+          height: 8px;
+          width: 8px;
+          border-radius: 50%;
+        }
+
+        .active {
+          background-color: $green;
+        }
+        .inactive {
+          background-color: $red;
+        }
+
+        &:not(:last-child) {
+          border-right: 1px solid #ffe3cd;
+        }
+      }
+
+      &:nth-child(odd) {
+        background-color: $background;
+      }
+      &:nth-child(even) {
+        background-color: rgba($color: $orange, $alpha: 0.1);
+      }
+
+      &:last-child {
+        td {
+          &:first-child {
+            border-radius: 0 0 0 15px;
+          }
+
+          &:last-child {
+            border-radius: 0 0 15px 0;
+          }
+        }
+      }
+
+      &:only-child {
         &:first-child {
           border-radius: 0 0 0 15px;
         }
@@ -91,4 +106,12 @@ table {
       }
     }
   }
+}
+
+.pagination {
+  margin-top: 20px;
+  width: 100%;
+  height: fit-content;
+  display: flex;
+  justify-content: flex-end;
 }
