--- a/src/Components/Select/select.scss
+++ b/src/Components/Select/select.scss
@@ -17,6 +17,7 @@
     height: 44px;
     width: fit-content;
     min-width: 106px;
+    box-sizing: border-box;
     border-radius: 8px;
     padding: 0 12px;
     display: flex;
