--- a/src/Components/Textbox/textbox.scss
+++ b/src/Components/Textbox/textbox.scss
@@ -7,21 +7,22 @@
     color: $text;
     font-size: 18px;
     line-height: 27px;
+    width: fit-content;
   }
 
   &__input {
     width: inherit;
     height: 44px;
     position: relative;
-
     margin-top: 8px;
 
     input {
+      height: inherit !important;
       width: inherit;
       font-size: 18px;
       padding: 10px;
       box-sizing: border-box;
-      border-radius: 10px;
+      border-radius: 8px;
       border: solid 1px $text-box-border;
       height: 44px;
       border: 1.5px solid #d4d4d7;
@@ -32,13 +33,14 @@
       }
     }
 
-    .eye-icon {
+    .input-icon {
       position: absolute;
       right: 10px;
       top: 0;
       bottom: 0;
       display: flex;
       align-items: center;
+      cursor: pointer;
     }
   }
 }
