--- a/src/Components/Layout/Device/DetailDevice/detaildevice.scss
+++ b/src/Components/Layout/Device/DetailDevice/detaildevice.scss
@@ -2,6 +2,8 @@
 .detail-device {
   height: 100%;
   width: 100%;
+  padding-right: 60px;
+  box-sizing: border-box;
 }
 
 .title {
@@ -25,7 +27,12 @@
   flex-direction: column;
   gap: 20px;
   box-sizing: border-box;
-  .container__info-device {
+  font-family: Nunito;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+
+  .form-label {
     height: 30px;
     width: 165px;
     font-size: 20px;
@@ -33,51 +40,17 @@
     line-height: 30px;
     color: #ff9138;
   }
-  .detail__col {
+  .row {
+    height: fit-content;
+    padding: 8px 0;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    .detail__col__left {
-      height: 24px;
-      width: 500px;
-      font-size: 16px;
-      font-weight: 600;
-      line-height: 24px;
-      .mathietbi {
-        margin-top: 7px;
-      }
-      .tenthietbi {
-        margin-top: 16px;
-      }
-      .diachiIp {
-        margin-top: 16px;
-      }
+    justify-content: space-between;
+    gap: 20px;
+
+    .flex-1 {
+      flex: 1;
     }
-    .detail__col__right {
-      height: 24px;
-      width: 500px;
-      border-radius: nullpx;
-      font-size: 16px;
-      font-weight: 600;
-      line-height: 24px;
-      .loaithietbi {
-        margin-top: 7px;
-      }
-      .tendangnhap {
-        margin-top: 16px;
-      }
-      .matkhau {
-        margin-top: 16px;
-      }
-    }
-  }
-  .dichvusudung {
-    margin-left: 24px;
-    margin-top: 105px;
-    height: 24px;
-    width: 100%;
-    border-radius: nullpx;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 24px;
   }
 }
