--- a/src/Components/Layout/Device/ModifyDevice/modifydevice.scss
+++ b/src/Components/Layout/Device/ModifyDevice/modifydevice.scss
@@ -4,83 +4,65 @@
   height: 100%;
   width: 100%;
   background-color: $gray;
+  padding-right: 60px;
+  box-sizing: border-box;
+}
 
-  &__tittle {
-    font-size: 24px;
+.title {
+  height: 36px;
+  width: 172px;
+  font-size: 24px;
+  font-weight: 700;
+  line-height: 36px;
+  color: $orange;
+  padding-top: 25px;
+}
+
+.container {
+  height: 550px;
+  width: 1152px;
+  padding: 16px 24px;
+  border-radius: 16px;
+  background-color: $background;
+  margin-top: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  box-sizing: border-box;
+  font-family: Nunito;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 24px;
+
+  .form-label {
+    height: 30px;
+    width: 165px;
+    font-size: 20px;
     font-weight: 700;
-    line-height: 36px;
-    color: $orange;
-    padding-top: 25px;
+    line-height: 30px;
+    color: #ff9138;
   }
-
-  &__container {
-    height: 550px;
-    width: 1152px;
-    border-radius: 16px;
-    background-color: $background;
-    margin-top: 16px;
-
-    .container-label {
-      height: 30px;
-      width: 162px;
-      font-size: 20px;
-      font-weight: 700;
-      line-height: 30px;
-      color: $orange;
-      padding-left: 24px;
-      padding-top: 16px;
-    }
-
-    .col {
-      display: flex;
-      flex-direction: row;
-
-      &__left {
-        padding-left: 24px;
-        width: 540px;
-        height: 44px;
-        padding-top: 20px;
-      }
-
-      &__right {
-        padding-left: 24px;
-        width: 540px;
-        height: 44px;
-        padding-top: 20px;
-      }
-    }
-
-    .use-service {
-
-    }
-
-    .note {
-
-    }
-  }
-
-  .btn__bottom {
-    margin-top: 24px;
+  .row {
+    height: fit-content;
+    padding: 8px 0;
+    width: 100%;
     display: flex;
     flex-direction: row;
-    gap: 40px;
+    justify-content: space-between;
+    gap: 20px;
 
-    :hover {
-      cursor: pointer;
-    }
-
-    .cancel {
-      height: 48px;
-      width: 147px;
-      margin-left: 400px;
-      border-radius: 8px;
-    }
-
-    .update__device {
-      height: 48px;
-      width: 147px;
-      margin-left: 32px;
-      border-radius: 8px;
+    .flex-1 {
+      flex: 1;
     }
   }
+}
+
+.btn__bottom {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
+  margin-top: 20px;
+  
 }
