--- a/src/Components/Layout/Device/NewDevice/newdevice.scss
+++ b/src/Components/Layout/Device/NewDevice/newdevice.scss
@@ -16,15 +16,16 @@
 }
 
 .container {
-  height: 550px;
-  width: 1152px;
+  height: fit-content;
+  min-height: 550px;
+  width: 100%;
   padding: 16px 24px;
   border-radius: 16px;
   background-color: $background;
   margin-top: 16px;
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 16px;
   box-sizing: border-box;
 
   .form-label {
@@ -65,20 +66,9 @@
 .btn__bottom {
   display: flex;
   flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  gap: 20px;
   margin-top: 20px;
-  :hover {
-    cursor: pointer;
-  }
-  .cancel {
-    height: 48px;
-    width: 147px;
-    margin-left: 400px;
-    border-radius: 8px;
-  }
-  .add__device {
-    height: 48px;
-    width: 147px;
-    margin-left: 32px;
-    border-radius: 8px;
-  }
+  
 }
