--- a/src/Components/Select/select.scss
+++ b/src/Components/Select/select.scss
@@ -1,11 +1,12 @@
 @import '../../scss/color';
 
 .app__select {
-  width: fit-content;
+  width: 100%;
   height: fit-content;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  flex: 1;
   &__label {
     color: $text;
     font-size: 18px;
@@ -15,7 +16,7 @@
   &__selector {
     margin-top: 8px;
     height: 44px;
-    width: fit-content;
+    width: inherit;
     min-width: 106px;
     box-sizing: border-box;
     border-radius: 8px;
