--- a/src/Components/Layout/Service/ModifyService/modifyservice.scss
+++ b/src/Components/Layout/Service/ModifyService/modifyservice.scss
@@ -20,7 +20,7 @@
 
 .container {
   height: 550px;
-  width: 1152px;
+  width: 100%;
   padding: 16px 24px;
   border-radius: 16px;
   background-color: $background;
@@ -33,28 +33,53 @@
   font-size: 16px;
   font-weight: 600;
   line-height: 24px;
+}
 
-  .form-label {
-    height: 30px;
-    width: 165px;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 30px;
-    color: #ff9138;
-  }
-  .row {
-    height: fit-content;
-    padding: 8px 0;
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 20px;
+.form-label {
+  height: 30px;
+  width: 165px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  color: #ff9138;
+}
 
-    .flex-1 {
-      flex: 1;
-    }
-  }
+.row {
+  height: fit-content;
+  padding: 8px 0;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-betweens;
+  align-items: flex-start;
+  gap: 20px;
+}
+
+textarea {
+  width: 553px;
+  height: 132px;
+  display: flex;
+  flex-direction: row;
+  align-items: flex-start;
+  gap: 10px;
+  box-sizing: border-box;
+  background: #ffffff;
+  border: 1.5px solid #d4d4d7;
+  border-radius: 8px;
+  resize: none;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.rule {
+  height: 30px;
+  width: 165px;
+  font-size: 20px;
+  font-weight: 700;
+  line-height: 30px;
+  color: #ff9138;
 }
 
 .btn__bottom {
