--- a/src/Components/Layout/Service/NewService/newservice.scss
+++ b/src/Components/Layout/Service/NewService/newservice.scss
@@ -40,14 +40,13 @@
                 height: fit-content;
                 display: flex;
                 align-items: center;
-                justify-content: space-between;
                 gap: 20px;
+                flex-direction: row;
 
                 .col {
-                    // background-color: red;
                     display: flex;
                     flex-direction: column;
-                    gap: 20px;
+                    gap: 15px;
                 }
 
                 textarea {
