--- a/src/Components/Layout/Service/NewService/newservice.scss
+++ b/src/Components/Layout/Service/NewService/newservice.scss
@@ -118,6 +118,12 @@
                 }
 
             }
+            .notification{
+                font-weight: 400;
+                font-size: 14px;
+                line-height: 21px;
+                color: #7E7D88;
+            }
         }
     }
     .new-service_btn{
