--- a/src/Components/Layout/Service/service.scss
+++ b/src/Components/Layout/Service/service.scss
@@ -8,33 +8,33 @@
   flex-direction: row;
   position: relative;
 
-  .sitemap {
-    position: absolute;
-    top: 30px;
-    left: 30px;
-    font-size: 20px;
-    display: flex;
-    align-items: center;
-    gap: 10px;
+  // .sitemap {
+  //   position: absolute;
+  //   top: 30px;
+  //   left: 30px;
+  //   font-size: 20px;
+  //   display: flex;
+  //   align-items: center;
+  //   gap: 10px;
 
-    span {
-      display: flex;
-      align-items: center;
-      font-family: Nunito;
-      font-size: 20px;
-      font-weight: 700;
-      line-height: 30px;
-      color: $orange;
-      svg {
-        path {
-          fill: $text;
-        }
-      }
-      &:first-child {
-        color: $text;
-      }
-    }
-  }
+  //   span {
+  //     display: flex;
+  //     align-items: center;
+  //     font-family: Nunito;
+  //     font-size: 20px;
+  //     font-weight: 700;
+  //     line-height: 30px;
+  //     color: $orange;
+  //     svg {
+  //       path {
+  //         fill: $text;
+  //       }
+  //     }
+  //     &:first-child {
+  //       color: $text;
+  //     }
+  //   }
+  // }
 
   .content {
     height: 100%;
