--- a/src/Components/Number/number.scss
+++ b/src/Components/Number/number.scss
@@ -1,13 +1,17 @@
 @import '../../scss/color';
 
 .modal {
+    position: absolute;
+    margin: auto;
     width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    background: rgba($color: rgb(0, 0, 0), $alpha: 0.3);
+
+    z-index: 2;
+    // background: rgba($color: rgb(0, 0, 0), $alpha: 0.3);
     .number-top {
       background-color: $background;
       width: 469px;
