--- a/src/Components/Select/select.scss
+++ b/src/Components/Select/select.scss
@@ -12,9 +12,10 @@
     font-size: 18px;
     line-height: 27px;
     width: fit-content;
+    font-weight: 600;
+    margin-bottom: 8px;
   }
   &__selector {
-    margin-top: 8px;
     height: 44px;
     width: inherit;
     min-width: 106px;
@@ -65,7 +66,7 @@
         flex-direction: column;
         align-items: flex-start;
         padding: 8px 0px;
-        
+
         .select-item {
           height: 44px;
           width: 100%;
