--- a/src/scss/_calendar.scss
+++ b/src/scss/_calendar.scss
@@ -1,5 +1,3 @@
-@import "../../../../scss/color";
-
 .react-calendar {
   height: fit-content;
   width: 100%;
@@ -8,6 +6,10 @@
   border-radius: 12px;
   padding: 0 30px 24px 30px;
   box-sizing: border-box;
+
+  .react-calendar__navigation__label {
+    pointer-events: none;
+  }
 
   &__navigation {
     width: 100%;
@@ -42,11 +44,9 @@
       display: none;
     }
   }
-
   &__viewContainer {
     width: 100%;
   }
-
   .react-calendar__month-view__weekdays {
     margin-top: 12px;
     &__weekday {
@@ -61,7 +61,6 @@
       }
     }
   }
-
   .react-calendar__month-view__days {
     margin-top: 12px;
 
@@ -77,10 +76,23 @@
       border-radius: 8px;
       color: $text;
     }
+
+    .react-calendar__tile--rangeStart {
+      background-color: $orange !important;
+      border-radius: 8px !important;
+      color: $background !important;
+    }
+
+    .react-calendar__tile--rangeEnd {
+      background-color: $orange !important;
+      border-radius: 8px !important;
+      color: $background !important;
+    }
+
     .react-calendar__tile--active {
-      background-color: $orange;
-      border-radius: 8px;
-      color: $background;
+      background-color: rgba($color: $orange, $alpha: 0.1);
+      border-radius: 0px;
+      color: $text;
     }
 
     button {
@@ -95,6 +107,42 @@
       font-weight: 400;
       line-height: 19px;
       font-family: Nunito;
+      cursor: pointer;
+    }
+  }
+  .react-calendar__year-view__months {
+    .react-calendar__year-view__months__month {
+      background-color: transparent;
+      outline: solid 1.5px $orange;
+      box-sizing: border-box;
+      border: none;
+      margin: 3px 0px;
+      padding: 8px 0;
+      border-radius: 3px;
+      cursor: pointer;
+    }
+  }
+  .react-calendar__decade-view__years {
+    .react-calendar__decade-view__years__year {
+      background-color: transparent;
+      outline: solid 1.5px $orange;
+      box-sizing: border-box;
+      border: none;
+      margin: 3px 0px;
+      padding: 8px 0;
+      border-radius: 3px;
+      cursor: pointer;
+    }
+  }
+  .react-calendar__century-view__decades {
+    .react-calendar__century-view__decades__decade {
+      background-color: transparent;
+      outline: solid 1.5px $orange;
+      box-sizing: border-box;
+      border: none;
+      margin: 3px 0px;
+      padding: 8px 0;
+      border-radius: 3px;
       cursor: pointer;
     }
   }
