--- a/src/Components/Layout/Device/NewDevice/newdevice.scss
+++ b/src/Components/Layout/Device/NewDevice/newdevice.scss
@@ -1,74 +1,82 @@
 @import '../../../../scss/color';
 
-.new-device {
-  height: 1000px;
+.app__layout-device__new-device {
+  height: 100%;
+  max-height: fit-content;
   width: 100%;
-}
-
-.title {
-  height: 36px;
-  width: 172px;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 36px;
-  color: $orange;
-  padding-top: 25px;
-}
-
-.container {
-  height: fit-content;
-  min-height: 550px;
-  width: 100%;
-  padding: 16px 24px;
-  border-radius: 16px;
-  background-color: $background;
-  margin-top: 16px;
+  box-sizing: border-box;
   display: flex;
   flex-direction: column;
-  gap: 16px;
-  box-sizing: border-box;
-
-  .form-label {
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 30px;
-    color: $orange;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-bottom: 120px;
+  &::-webkit-scrollbar {
+    display: none;
   }
-  .row {
+  &__title {
+    height: 36px;
+    width: 172px;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+    color: $orange;
+    padding-top: 25px;
+  }
+
+  &__container {
     height: fit-content;
     width: 100%;
+    padding: 16px 24px;
+    border-radius: 16px;
+    background-color: $background;
+    margin-top: 16px;
     display: flex;
+    flex-direction: column;
+    gap: 8px;
+    box-sizing: border-box;
+
+    .form-label {
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 30px;
+      color: $orange;
+    }
+    .row {
+      height: fit-content;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      gap: 24px;
+    }
+
+    .note {
+      height: 21px;
+      width: 195px;
+      padding-left: 24px;
+      padding-top: 45px;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 21px;
+    }
+
+    .app__text-box__label {
+      font-family: Nunito;
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 24px;
+      letter-spacing: 0em;
+      text-align: left;
+    }
+  }
+  &__btn__bottom {
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
     align-items: center;
-    justify-content: space-between;
-    gap: 24px;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
   }
-
-  .app__text-box__label {
-    font-family: Nunito;
-    font-size: 16px;
-    font-weight: 600;
-    line-height: 24px;
-    letter-spacing: 0em;
-    text-align: left;
-  }
-}
-
-.note {
-  height: 21px;
-  width: 195px;
-  padding-left: 24px;
-  padding-top: 45px;
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
-}
-
-.btn__bottom {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 20px;
-  
 }
