--- a/src/Components/Layout/Queue/DetailQueue/detailqueue.scss
+++ b/src/Components/Layout/Queue/DetailQueue/detailqueue.scss
@@ -1,5 +1,5 @@
 @import '../../../../scss/color';
-.detail-queue {
+.app__layout-queue__detail-queue {
   height: 1000px;
   width: 100%;
 
@@ -40,7 +40,7 @@
   }
 }
 
-.title {
+.app__layout-queue__title {
   height: 36px;
   width: 172px;
   font-size: 24px;
