--- a/src/Components/Layout/Queue/NewQueue/newqueue.scss
+++ b/src/Components/Layout/Queue/NewQueue/newqueue.scss
@@ -1,5 +1,5 @@
 @import '../../../../scss/color';
-.new-queue {
+.app__layout-queue__new-queue {
   height: 1000px;
   width: 100%;
 
@@ -47,7 +47,7 @@
   }
 }
 
-.title {
+.app__layout-queue__new-queue__title {
   height: 36px;
   width: 172px;
   font-size: 24px;
