--- a/src/Components/Layout/Report/CreateReport/createreport.scss
+++ b/src/Components/Layout/Report/CreateReport/createreport.scss
@@ -1,11 +1,10 @@
 @import '../../../../scss/color';
 @import '../../../../scss/calendar';
-.new-report {
+.app__layout-report__new-report__new-report {
   height: 1000px;
   width: 100%;
   padding-right: 60px;
   box-sizing: border-box;
-  
 
   &__container {
     height: fit-content;
@@ -14,7 +13,7 @@
   }
 }
 
-.add-device-btn {
+.app__layout-report__add-device-btn {
   position: fixed;
   height: 94px;
   width: 80px;
