--- a/src/Components/Layout/Service/ListService/listservice.scss
+++ b/src/Components/Layout/Service/ListService/listservice.scss
@@ -1,6 +1,6 @@
 @import '../../../../scss/color';
 
-.service-list {
+.app__layout-service__service-list {
   height: 1000px;
   width: 100%;
   display: flex;
@@ -33,7 +33,7 @@
   }
 }
 
-.add-service-btn {
+.app__layout-service__add-service-btn {
   position: fixed;
   height: 94px;
   width: 80px;
