--- a/src/Components/Layout/Queue/DetailQueue/detailqueue.scss
+++ b/src/Components/Layout/Queue/DetailQueue/detailqueue.scss
@@ -1,11 +1,29 @@
 @import '../../../../scss/color';
-.detail-queue {
-  height: 1000px;
+.app__queue-layout__detail-queue {
+  height: 100%;
   width: 100%;
+  padding-right: 60px;
+  box-sizing: border-box;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  position: relative;
+
+  &::-webkit-scrollbar {
+    display: none;
+  }
+
+  &__title {
+    height: 36px;
+    width: 172px;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+    color: $orange;
+    padding-top: 25px;
+  }
 
   &__container {
-    height: fit-content;
-    min-height: 550px;
+    height: 550px;
     width: 100%;
     padding: 16px 24px;
     border-radius: 16px;
@@ -13,8 +31,12 @@
     margin-top: 16px;
     display: flex;
     flex-direction: column;
-    gap: 16px;
+    gap: 20px;
     box-sizing: border-box;
+    font-family: Nunito;
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
 
     .form-label {
       height: 30px;
@@ -38,14 +60,41 @@
       }
     }
   }
-}
 
-.title {
-  height: 36px;
-  width: 172px;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 36px;
-  color: $orange;
-  padding-top: 25px;
+  &__float-btn {
+    position: fixed;
+    height: 94px;
+    width: 80px;
+    right: 0;
+    top: 244px;
+    background-color: rgba($color: $orange, $alpha: 0.2);
+    border-radius: 7.5px 0 0 7.5px;
+    display: flex;
+    flex-direction: column;
+    cursor: pointer;
+
+    &:hover {
+      background-color: rgba($color: $orange, $alpha: 0.7);
+      span {
+        color: $background;
+      }
+    }
+
+    span {
+      width: inherit;
+      height: fit-content;
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+
+      font-family: Nunito;
+      font-size: 14px;
+      font-weight: 600;
+      line-height: 19px;
+      letter-spacing: 0em;
+      text-align: center;
+      color: $orange;
+    }
+  }
 }
