--- a/src/Components/Layout/Device/NewDevice/newdevice.scss
+++ b/src/Components/Layout/Device/NewDevice/newdevice.scss
@@ -15,7 +15,7 @@
   }
   &__title {
     height: 36px;
-    width: 172px;
+    width: 100%;
     font-size: 24px;
     font-weight: 700;
     line-height: 36px;
