--- a/src/Components/Layout/Report/Test/test.scss
+++ b/src/Components/Layout/Report/Test/test.scss
@@ -1,69 +1,82 @@
-@import './../../../../scss/color';
+@import '../../../../scss/color';
 
-.modify-account {
+.app__layout-test__new-test {
   height: 100%;
+  max-height: fit-content;
   width: 100%;
-  background-color: $gray;
-  padding-right: 60px;
   box-sizing: border-box;
   display: flex;
   flex-direction: column;
-}
-
-.title {
-  height: 36px;
-  width: 100%;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 36px;
-  color: $orange;
-  padding-top: 25px;
-}
-
-.container {
-  height: 550px;
-  width: 1152px;
-  padding: 16px 24px;
-  border-radius: 16px;
-  background-color: $background;
-  margin-top: 16px;
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  box-sizing: border-box;
-  font-family: Nunito;
-  font-size: 16px;
-  font-weight: 600;
-  line-height: 24px;
-
-  .form-label {
-    height: 30px;
-    width: 165px;
-    font-size: 20px;
-    font-weight: 700;
-    line-height: 30px;
-    color: #ff9138;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding-bottom: 120px;
+  &::-webkit-scrollbar {
+    display: none;
   }
-  .row {
-    height: fit-content;
-    padding: 8px 0;
+  &__title {
+    height: 36px;
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 20px;
+    font-size: 24px;
+    font-weight: 700;
+    line-height: 36px;
+    color: $orange;
+    padding-top: 25px;
+  }
 
-    .flex-1 {
-      flex: 1;
+  &__container {
+    height: fit-content;
+    width: 100%;
+    padding: 16px 24px;
+    border-radius: 16px;
+    background-color: $background;
+    margin-top: 16px;
+    display: flex;
+    flex-direction: column;
+    gap: 8px;
+    box-sizing: border-box;
+
+    .form-label {
+      font-size: 20px;
+      font-weight: 700;
+      line-height: 30px;
+      color: $orange;
+    }
+    .row {
+      height: fit-content;
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      gap: 24px;
+    }
+
+    .note {
+      height: 21px;
+      width: 195px;
+      padding-left: 24px;
+      padding-top: 45px;
+      font-size: 14px;
+      font-weight: 400;
+      line-height: 21px;
+    }
+
+    .app__text-box__label {
+      font-family: Nunito;
+      font-size: 16px;
+      font-weight: 600;
+      line-height: 24px;
+      letter-spacing: 0em;
+      text-align: left;
     }
   }
-}
-
-.btn__bottom {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 20px;
+  &__btn__bottom {
+    height: fit-content;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20px;
+    margin-top: 20px;
+  }
 }
