--- a/src/Components/Layout/Queue/queue.scss
+++ b/src/Components/Layout/Queue/queue.scss
@@ -1,22 +1,17 @@
 @import '../../../scss/color';
 
 .app__layout-queue {
-  height: 100%;
+  flex: 1;
   width: 100%;
+  height: inherit !important;
   background-color: $gray;
-  display: flex;
-  flex-direction: row;
   position: relative;
 
-  .app__layout-queue__content {
-    height: 100%;
+  &__content {
+    height: inherit !important;
     width: 100%;
     box-sizing: border-box;
     margin-top: 90px;
-    padding: 0 30px 30px 30px;
-    overflow-y: scroll;
-    &::-webkit-scrollbar {
-      display: none;
-    }
+    padding: 0 30px;
   }
 }
