--- a/src/Components/Layout/Device/DetailDevice/detaildevice.scss
+++ b/src/Components/Layout/Device/DetailDevice/detaildevice.scss
@@ -7,6 +7,7 @@
   overflow-y: scroll;
   overflow-x: hidden;
   position: relative;
+  padding-bottom: 120px;
 
   &::-webkit-scrollbar {
     display: none;
