finish base structre

--- a/src/Components/Textbox/textbox.scss
+++ b/src/Components/Textbox/textbox.scss
@@ -2,7 +2,7 @@
 
 .app__text-box {
   width: 100%;
-  flex: 1;
+  // flex: 1;
   height: fit-content;
   &__label {
     color: $text;
@@ -15,13 +15,34 @@
 
   &__input {
     width: inherit;
-    height: 44px;
+    height: fit-content;
+    min-height: 44px;
     position: relative;
 
     input {
-      height: inherit !important;
+      height: 44px !important;
       width: inherit;
-      font-size: 18px;
+      padding: 10px;
+      box-sizing: border-box;
+      font-family: Nunito !important;
+    font-size: 18px !important;
+      border-radius: 8px;
+      border: solid 1px $text-box-border;
+      height: 44px;
+      border: 1.5px solid #d4d4d7;
+
+      &:focus {
+        outline: rgba($color: blue, $alpha: 0.3);
+        border: 1px solid rgba($color: blue, $alpha: 0.3);
+      }
+    }
+
+    textarea {
+      height: inherit !important;
+      min-height: 160px;
+      width: inherit;
+      font-family: Nunito !important;
+      font-size: 18px !important;
       padding: 10px;
       box-sizing: border-box;
       border-radius: 8px;
@@ -45,4 +66,8 @@
       cursor: pointer;
     }
   }
+}
+
+.flex-1 {
+  flex: 1;
 }
